--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -19,10 +19,6 @@
 	margin-bottom: 5px;
 }
 
-.btn-primary {
-	margin-right: 5px;
-}
-
 .sold {
 	font-style: italic;
 	color: #999;
@@ -58,9 +54,13 @@
 	margin-top: 15px;
 }
 
-#reg-form .form-control {
-	width: 30%;
-	margin-bottom: 15px;
+// #reg-form .form-control {
+// 	width: 30%;
+// 	margin-bottom: 15px;
+// }
+
+.vertical-link-group {
+	padding-top: 10px;
 }
 
 .user-status {
