--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,36 @@
-<%= form_for @post do |f|  %>
+<div class="form-group">
+	<div class="listing-browser">
+	<%= form_for @post do |f|  %>
   <%= render "shared/error_messages", :target => @post %>
   <!-- listing_types is a class model with the ad types in a nested array -->
-  <%= f.select :adtype, options_for_select(Post.listing_types, @post.adtype), :include_blank => 'Select Ad Type', :required => true %><br />
+  <%= f.select :adtype, options_for_select(Post.listing_types, @post.adtype), :include_blank => 'Select Ad Type', :required => true %>&nbsp;
  	
- 	<%= f.collection_select :category_id, @categories, :id, :name, :include_blank => 'Select Category' %><br />
- 	Title<br>
- 	<%= f.text_field :title, :class => 'input-xxlarge', :required => true %><br />
+ 	<%= f.collection_select :category_id, @categories, :id, :name, :include_blank => 'Select Category' %>
+ 	<div class="form-label">Title</div>
+ 	<%= f.text_field :title, :class => 'form-control', :required => true %>
  	<div id="price-field">
-	 	Price (e.g. 400.00)<br>
-	 	<%= f.number_field :price, :class => 'input-medium',  :in => 0..999999.99 %> <%= f.select :currency, options_for_select(Post.currency_types, @post.currency) %><br>
+	 	<div class="form-label">Price (e.g. 400.00)</div>
+	 	<%= f.number_field :price, :class => 'form-control form-control-small',  :in => 0..999999.99 %> <%= f.select :currency, options_for_select(Post.currency_types, @post.currency) %>
 	</div>
-	Location Zip Code (5-digits only)<br>
- 		<%= f.number_field :zip, :class => 'input-medium', :in => 00100..99999, :required => true %><br />
+	<div class="form-label">Location Zip Code (5-digits only)</div>
+ 		<%= f.number_field :zip, :class => 'form-control form-control-small', :in => 00100..99999, :required => true %>
  	
- 	Quantity<br>
- 		<%= f.number_field :qty, :class => 'input-medium', :in => 1..99, :value => 1, :required => true %><br />
+ 	<div class="form-label">Quantity</div>
+ 		<%= f.number_field :qty, :class => 'form-control form-control-small', :in => 1..99, :value => 1, :required => true %>
 
- 	Size (if applicable)<br>
- 		<%= f.text_field :size, :class => 'input-medium' %><br />
+ 	<div class="form-label">Size (if applicable)</div>
+ 		<%= f.text_field :size, :class => 'form-control form-control-small' %>
  		
-	Description<br>
-	 	<%= f.text_area :description, :rows => '10', :class => 'input-xxlarge', :required => true %><br />
+	<div class="form-label">Description</div>
+	 	<%= f.text_area :description, :rows => '10', :class => 'form-control', :required => true %>
 	
-	Tags (separated by commas)<br>
-	 	<%= f.text_field :tag_list, :class => 'input-xxlarge' %><br />
+	<div class="form-label">Tags (separated by commas)</div>
+	 	<%= f.text_field :tag_list, :class => 'form-control' %>
 
- 	<%= f.submit 'Continue', :class => 'btn btn-primary'%> <%= link_to "Cancel", root_url, class: "btn" %> 
+ 	<div class="submit-group">
+ 		<%= f.submit 'Continue', :class => 'btn btn-primary'%> <%= link_to "Cancel", root_url, class: "btn btn-default" %>
+ 	</div>
 <% end %>
+</div>
+</div>
 
