--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -22,6 +22,5 @@
 	<% end %>
 </ul>
 
-<div class="centered">
-  <%= will_paginate @posts, renderer: BootstrapPagination::Rails, :class => 'pagination pagination-sm' %>
-</div>
+
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails, :class => 'pagination pagination-sm pagination-center' %>
