--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -2,13 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.comments {
-	padding-bottom: 30px;
-}
+// .comments {
+// 	padding-bottom: 30px;
+// }
 
-.comments textarea {
-	width: 530px;
-}
+// .comments textarea {
+// 	width: 530px;
+// }
 
 .comments li {
 	list-style-type: none;
