--- a/app/views/images/_post_images.html.erb
+++ b/app/views/images/_post_images.html.erb
@@ -1,12 +1,8 @@
-<div class="row" id="post_images">
-	
-	  <ul class="thumbnails">
-	    <% @post.images.sort.each do |pic| %>
-	     <li><%= image_tag pic.image_file.url(:thumb).to_s %>	
-					
-					<%= link_to 'Remove', post_image_path(@post, pic.id), :confirm => "Delete this photo?", :method => 'delete' %>
-				</li>
-	    <% end %>
-	  </ul>
-	
-</div>	
+<ul class="thumbnails">
+    <% @post.images.sort.each do |pic| %>
+     <li>
+     		<%= image_tag pic.image_file.url(:thumb).to_s %>	
+				<%= link_to 'Remove', post_image_path(@post, pic.id), :confirm => "Delete this photo?", :method => 'delete' %>
+			</li>
+    <% end %>
+  </ul>	
