--- a/app/views/images/index.js.erb
+++ b/app/views/images/index.js.erb
@@ -1,1 +1,1 @@
-$('#post_images').html('<%= escape_javascript(render 'post_images') %>');
+$('#post-images').html('<%= escape_javascript(render 'post_images') %>');
