--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,70 +5,70 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
-    <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-    <script type="text/javascript">
-    Shadowbox.init({
-    	overlayOpacity: .90,
-    	continuous: true
-    });
-    </script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+  <script type="text/javascript">
+  Shadowbox.init({
+  	overlayOpacity: .90,
+  	continuous: true
+  });
+  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
   <body>
 
   	<div class="container">
   		<div class="navbar navbar-fixed-top">
+
   			<div class="container">
   				<div class="navbar-inner">
-  				<div class="navbar-brand">
-  					<a href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
-  					<h4>Buy and Sell Vintage Bikes and Parts!</h4>
-  				</div>	
-  				<div class="main_search">
-  					<% if params[:action] == 'index' && params[:controller] == 'posts' %>
-	  					<%= form_tag posts_path, :class => "form-search", :method => 'get', remote: true, :id => "posts_search" do %>
-		  					<%= text_field_tag :search, params[:search], :class => "input-xlarge" %>
-		  					<%= submit_tag "Search", :name => nil, :class => "btn btn-default" %>
-	  					<% end %>
-  					<% else %>
-	  					<%= form_tag posts_path, :class => "form-search", :method => 'get', :id => "posts_search" do %>
-		  					<%= text_field_tag :search, params[:search], :class => "input-xlarge" %>
-		  					<%= submit_tag "Search", :name => nil, :class => "btn btn-default" %>
-	  					<% end %>
-  					<% end %>
-  				</div>		    
-  				<div class="login-area">	
-  					<% if current_user %>
-	  					<div class="user-status">
-	  						Welcome <%= link_to current_user.fname, user_path(current_user) %>
-	  					</div>
-	  					<div class="login-links">	
-	  						<%= link_to "Post Ad", new_post_path %>
-	  						<%= link_to "Log Out", logout_path(current_user) %>
-  						</div>
-						<% else %>
-  						<div class="login-links">
-  							<%= link_to "Post Ad", login_path %>
-  							<%= link_to "Login", login_path %>
-  							<%= link_to "Register", signup_path %>
-  						</div>	
-						<% end %>
-					</div>
-  			</div>
-  			</div>
+            <div class="navbar-brand">
+             <a href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
+             <h4>Buy and Sell Vintage Bikes and Parts!</h4>
+            </div>	
+            <div class="main-search">
+              <% if params[:action] == 'index' && params[:controller] == 'posts' %>
+                <%= form_tag posts_path, :class => "form-search", :method => 'get', remote: true, :id => "posts_search" do %>
+                <%= text_field_tag :search, params[:search], :class => "form-control form-control-medium" %>
+                <%= submit_tag "Search", :name => nil, :class => "btn btn-default" %>
+                <% end %>
+              <% else %>
+                <%= form_tag posts_path, :class => "form-search", :method => 'get', :id => "posts_search" do %>
+                <%= text_field_tag :search, params[:search], :class => "form-control form-control-medium" %>
+                <%= submit_tag "Search", :name => nil, :class => "btn btn-default" %>
+                <% end %>
+              <% end %>
+            </div>		    
+            <div class="login-area">	
+              <% if current_user %>
+                <div class="user-status">
+                 Welcome <%= link_to current_user.fname, user_path(current_user) %>
+                </div>
+                <div class="login-links">	
+                 <%= link_to "Post Ad", new_post_path %>
+                 <%= link_to "Log Out", logout_path(current_user) %>
+                </div>
+              <% else %>
+                <div class="login-links">
+                <%= link_to "Post Ad", login_path %>
+                <%= link_to "Login", login_path %>
+                <%= link_to "Register", signup_path %>
+                </div>	
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+      <div class="content">
+       <%= yield %>
+      </div>
 
-  		</div>
+    </div>
 
+    <%= render 'posts/footer' %>  	
 
-  		<div class="content">
-  			<%= yield %>
-  		</div>
-  		
-		</div>
-
-		<%= render 'posts/footer' %>  	
-
- </body>
+  </body>
 </html>
