--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,12 +4,17 @@
 
 <div class="col-md-8">
 <h3>Create a new password</h3>
-  <%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
-    <%= render "shared/error_messages", :target => @user %>
-    
-    <%= f.password_field :password, :placeholder => "password" %>
-    <%= f.password_field :password_confirmation, :placeholder => "password confirmation" %>
-    <br />
-    <%= f.submit "Update Password", :class => "btn btn-primary" %></div>
-  <% end %>
+  <div class="form-inline">
+  	<%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
+	    <%= render "shared/error_messages", :target => @user %>
+	    
+	    <div class="form-group">
+	    	<%= f.password_field :password, :class => 'form-control', :placeholder => "new password" %>
+	    </div>	
+	    <div class="form-group">
+	    	<%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => "new password confirmation" %>	    
+	    </div>
+	    <%= f.submit "Submit", :class => "btn btn-primary" %></div>
+  	<% end %>
+  </div>
 </div>
