--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,6 +27,8 @@
     <%= f.label :password_confirmation, "Confirm Password" %>
     <%= f.password_field :password_confirmation, :class => 'form-control' %><br />
 
-    <%= f.submit "Save changes", class: "btn btn-primary" %><%= f.button "Cancel", class: "btn btn-default" %>
+    <div class="submit-group">
+      <%= f.submit "Save changes", class: "btn btn-primary" %><%= f.button "Cancel", class: "btn btn-default" %>
+    </div>
   <% end %>
 </div>  
