--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -18,12 +18,12 @@ html, body, {
   height: 100%; 
 }
 
-body > .container { 
+.container { 
   height: auto; 
   min-height: 100%;
   padding-left: 0px;
   padding-right: 0px;
-  max-width: 940px;
+  max-width: 970px;
 }
 
 /* @import "bootstrap-responsive"; */
@@ -37,6 +37,10 @@ h4 {
   clear: both;
   font-weight: 900;
   color: #666;
+}
+
+.center {
+  margin: 0 auto;
 }
 
 .alert h4 {
@@ -84,6 +88,10 @@ h4 {
   margin-left: 0px;
 }
 
+.listing-browser {
+  padding-top: 40px;
+}
+
 .listing-browser h2 {
   display: inline;
 }
@@ -109,8 +117,8 @@ h4 {
 
 #post-index  li {
   margin-left: 0px;
-  margin-bottom: 13px;
-  margin-right: 13px;
+  margin-bottom: 23px;
+  margin-right: 23px;
   position: relative;
   width: 225px;
   height: 225px;
@@ -189,7 +197,7 @@ h4 {
 
 #post-images ul {
   list-style: none;
-  -webkit-padding-start: 0px;
+  //-webkit-padding-start: 0px;
 }
 
 #post-images .thumbnails li{
@@ -222,8 +230,7 @@ h4 {
 .pagination {
   display: block;
   clear: both;
-  padding-top: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 35px;
 }
 .main-search {
   display: inline;
