--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -27,9 +27,10 @@ footer {
 }
 
 footer .container .col-md-3 {
-	margin-right: 13px;
+	margin-right: 23px;
 	margin-left: 0px;
   width: 225px;
+  padding: 0px;
 }
 
 footer .container .col-md-3:nth-last-child(2) {
@@ -69,7 +70,7 @@ footer .title {
 	border-bottom: 1px solid #666;
 	margin-bottom: 10px;
 	padding-bottom: 5px;
-	width: 200px;
+	width: 225px;
 }
 
 
