--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,9 @@
         </div>
       </div>
     
-      <%= yield %>
+      <div class="content">
+        <%= yield %>
+      </div>
       
     </div>
 
