--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -76,7 +76,9 @@
 				</div>
 			
 
-			<div class="copyright">© 2013 HeavyPeddler Industries, Inc. | Buy and Sell your bikes and bike parts! | All Rights Reserved. <a href="privacy.html" target="_blank">Privacy Policy</a>. <!--<a href="terms.html" target="_blank">Site Map</a>--> </div>
+			<div class="center">
+				<div class="copyright">© 2013 HeavyPeddler Industries, Inc. | Buy and Sell your bikes and bike parts! | All Rights Reserved. <a href="privacy.html" target="_blank">Privacy Policy</a>. <!--<a href="terms.html" target="_blank">Site Map</a>--> </div>
+			</div>
 </div>
 
 </footer>
