--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,16 @@
 <%= render partial: "shared/flash_messages", flash: flash %>
 
-<div class="listing-browser">
+<div id="listing-browser">
 	<h2>View </h2>
 		<form action="/posts" method="GET" id="sortfilter">
 			<!-- somehow passing in @category instance variable, and because the object is :category, rails figures this out and it shows the selected value -->
 			<%= collection_select :category, :id, @categories, :id, :name, {:include_blank => 'All'} %>
 			<!-- I pass in params[:adtype], and use that to show the selected value -->
 			<%= select_tag :adtype, options_for_select(@adtypes, params[:adtype]) %>
-			<input type="submit" value="Browse" class="btn btn-default">
+			<input type="submit" value="Browse" class="btn btn-primary">
 		</form>
 </div>
 
 <div id="posts">
 	<%= render "posts" %>
-</div>
-
-<div class="center">
-	<%= will_paginate @posts, renderer: BootstrapPagination::Rails, bootstrap: 3, :class => 'pagination-sm' %>
 </div>
