--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -22,4 +22,8 @@
 	<% end %>
 </ul>
 
+<div class="center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails, bootstrap: 3, :class => 'pagination-sm' %>
+</div>
+
 
