adjust media queries for <480px

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -31,7 +31,7 @@ footer .container .col-md-3 {
 	margin-right: 23px;
 	margin-left: 0px;
   width: 225px;
-  padding: 0px;
+  padding: 0 0 20px 0;
   float: left;
 }
 
